# ValkyrieDB

./: .gitignore  CMakeLists.txt  Makefile  README.md  Shell.py  ValkyrieDB.sh  allexps.sh  exp.sh  valkyrie.py
MushroomCloud/: Manifest.txt  README.md  build.sh  run.sh
MushroomCloud/src/edu/buffalo/cse562/: LeafValueComparator.java  Main.java  ParseTreeEvaluator.java  ParseTreeGenerator.java  ParseTreeOptimizer.java
MushroomCloud/src/edu/buffalo/cse562/exceptions/: UnsupportedStatementException.java
MushroomCloud/src/edu/buffalo/cse562/operators/: CrossProductOperator.java  DistinctOperator.java  (+12 more)
Valkyrie/: CMakeLists.txt  Makefile
Valkyrie/Expression/: BianryExpression.h  Expression.h  LeafValue.h  Operations.h
Valkyrie/include/: Codegen.h  DataTypes.h  Expression.h  Expression.h.orig  ExpressionParser.h  JoinOperator.h  Operator.h  Parser.h  PrintOperator.h  ProjectionOperator.h  ScanOperator.h  Schema.h  SelectOperator.h  Tuple.h
Valkyrie/src/: Codegen.cpp  Context.h  DataTypes.h  Expression.cpp  ExpressionParser.cpp  ExpressionParser.cpp.orig  JoinOperator.cpp  Main.cpp  Operator.cpp  Parser.cpp  PrintOperator.cpp  ProjectionOperator.cpp  ScanOperator.cpp  Schema.cpp  SelectOperator.cpp
src/edu/buffalo/valkyrie/: LLVMMain.java  LLVMMain.java~
test/: README.md  ddl-schema.sql  time.py  tpch-data-setup.py
test/cprogs/: q1  q1.c  q2.c  q3.c  q4.cpp
test/data/: PLAYERS.tbl  r.tbl  s.tbl  t.tbl
test/sql/: test.sql  tpch1.sql  tpch10.sql  tpch12.sql  tpch3.sql  tpch5.sql  tpch6.sql  tpch_schemas.sql
test/sql/testcases/: 2.sql  3.sql  4.sql  5.sql
(+3 files in other folders)
